replace foundation with innovations

--- a/about.html
+++ b/about.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About Us - Awaredia Foundation</title>
+    <title>About Us - Awaredia Innovations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Learn about Awaredia Foundation's mission to transform health awareness in India through education and community outreach.">
-    <meta name="keywords" content="Awaredia Foundation, Awaredia, health awareness India, nutrition education, about us, health foundation India">
+    <meta name="description" content="Learn about Awaredia Innovations's mission to transform health awareness in India through education and community outreach.">
+    <meta name="keywords" content="Awaredia Innovations, Awaredia, health awareness India, nutrition education, about us, health innovations India">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://awarediafoundation.org/about.html">
-    <meta property="og:title" content="About Us - Awaredia Foundation">
-    <meta property="og:description" content="Learn about Awaredia Foundation's mission to transform health awareness in India through education and community outreach.">
-    <!-- <meta property="og:image" content="https://awarediafoundation.org/images/og-image.jpg"> -->
+    <meta property="og:url" content="https://awarediainnovations.org/about.html">
+    <meta property="og:title" content="About Us - Awaredia Innovations">
+    <meta property="og:description" content="Learn about Awaredia Innovations's mission to transform health awareness in India through education and community outreach.">
+    <!-- <meta property="og:image" content="https://awarediainnovations.org/images/og-image.jpg"> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://awarediafoundation.org/about.html">
-    <meta property="twitter:title" content="About Us - Awaredia Foundation">
-    <meta property="twitter:description" content="Learn about Awaredia Foundation's mission to transform health awareness in India through education and community outreach.">
-    <!-- <meta property="twitter:image" content="https://awarediafoundation.org/images/og-image.jpg"> -->
+    <meta property="twitter:url" content="https://awarediainnovations.org/about.html">
+    <meta property="twitter:title" content="About Us - Awaredia Innovations">
+    <meta property="twitter:description" content="Learn about Awaredia Innovations's mission to transform health awareness in India through education and community outreach.">
+    <!-- <meta property="twitter:image" content="https://awarediainnovations.org/images/og-image.jpg"> -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
@@ -158,7 +158,7 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Foundation is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovations is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
@@ -167,7 +167,7 @@
             <h3 class="heading-section">Contact Info</h3>
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">New Delhi, India</span></li>
-                <li><a href="mailto:awarediafoundation@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediafoundation@gmail.com</span></a></li>
+                <li><a href="mailto:awarediainnovations@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediainnovations@gmail.com</span></a></li>
               </ul>
           </div>
         </div>
