--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Awaredia Innovation educates and empowers individuals about nutrition, food labels, and health awareness throughout India, ensuring a healthier future.">
     
     <!-- Keywords to improve search for "awaredia innovations" -->
-    <meta name="keywords" content="Awaredia Innovation, Awaredia, health awareness India, nutrition education, food labels, protein awareness, health foundation India">
+    <meta name="keywords" content="Awaredia Innovation, Awaredia, health awareness India, nutrition education, food labels, protein awareness, health innovations India">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
