--- a/mission.html
+++ b/mission.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Our Mission - Awaredia Foundation</title>
+    <title>Our Mission - Awaredia Innovations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Awaredia Foundation's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
-    <meta name="keywords" content="Awaredia Foundation mission, health mission India, nutrition education, food awareness, health foundation India">
+    <meta name="description" content="Awaredia Innovations's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
+    <meta name="keywords" content="Awaredia Innovations mission, health mission India, nutrition education, food awareness, health innovations India">
     
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
@@ -30,17 +30,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://awarediafoundation.org/mission.html">
-    <meta property="og:title" content="Our Mission - Awaredia Foundation">
-    <meta property="og:description" content="Awaredia Foundation's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
-    <!-- <meta property="og:image" content="https://awarediafoundation.org/images/og-image.jpg"> -->
+    <meta property="og:url" content="https://awarediainnovations.org/mission.html">
+    <meta property="og:title" content="Our Mission - Awaredia Innovations">
+    <meta property="og:description" content="Awaredia Innovations's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
+    <!-- <meta property="og:image" content="https://awarediainnovations.org/images/og-image.jpg"> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://awarediafoundation.org/mission.html">
-    <meta property="twitter:title" content="Our Mission - Awaredia Foundation">
-    <meta property="twitter:description" content="Awaredia Foundation's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
-    <!-- <meta property="twitter:image" content="https://awarediafoundation.org/images/og-image.jpg"> -->
+    <meta property="twitter:url" content="https://awarediainnovations.org/mission.html">
+    <meta property="twitter:title" content="Our Mission - Awaredia Innovations">
+    <meta property="twitter:description" content="Awaredia Innovations's mission is to educate and empower individuals, ensuring a healthier future for India through nutrition awareness.">
+    <!-- <meta property="twitter:image" content="https://awarediainnovations.org/images/og-image.jpg"> -->
   </head>
   <body>
     
@@ -198,7 +198,7 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Foundation is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovations is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
@@ -207,7 +207,7 @@
             <h3 class="heading-section">Contact Info</h3>
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">New Delhi, India</span></li>
-                <li><a href="mailto:awarediafoundation@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediafoundation@gmail.com</span></a></li>
+                <li><a href="mailto:awarediainnovations@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediainnovations@gmail.com</span></a></li>
               </ul>
           </div>
         </div>
