--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Awaredia Foundation</a>
+    <a class="navbar-brand" href="index.html">Awaredia Innovations</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="oi oi-menu"></span> Menu
     </button>
@@ -8,10 +8,6 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" id="nav-home"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item" id="nav-mission"><a href="mission.html" class="nav-link">Mission</a></li>
-        <li class="nav-item" id="nav-vision"><a href="vision.html" class="nav-link">Vision</a></li>
-        <li class="nav-item" id="nav-focus-areas"><a href="focus-areas.html" class="nav-link">Focus Areas</a></li>
-        <li class="nav-item" id="nav-donate"><a href="donate.html" class="nav-link">Donate</a></li>
         <li class="nav-item" id="nav-about"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-item" id="nav-contact"><a href="contact.html" class="nav-link">Contact</a></li>
         <li class="nav-item dropdown" id="nav-more">
@@ -25,7 +21,6 @@
             <a class="dropdown-item" href="shipping-and-delivery.html">Shipping Details</a>
           </div>
         </li>
-      </ul>
     </div>
   </div>
 </nav> 
