--- a/vision.html
+++ b/vision.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Our Vision - Awaredia Foundation</title>
+    <title>Our Vision - Awaredia Innovations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -133,7 +133,7 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Foundation is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovations is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
@@ -142,7 +142,7 @@
             <h3 class="heading-section">Contact Info</h3>
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">New Delhi, India</span></li>
-                <li><a href="mailto:awarediafoundation@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediafoundation@gmail.com</span></a></li>
+                <li><a href="mailto:awarediainnovations@gmail.com"><span class="icon icon-envelope"></span><span class="text">awarediainnovations@gmail.com</span></a></li>
               </ul>
           </div>
         </div>
