removed unnecessary things

--- a/focus-areas.html
+++ b/focus-areas.html
@@ -185,7 +185,7 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Innovations is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovations is a dedicated  organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
