--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
   <div class="site-section section-counter">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 pr-5">
+        <!-- <div class="col-md-6 pr-5">
           <div class="block-48">
             <span class="block-48-text-1">Power to Impact</span>
             <span class="block-48-text-1 mb-4 d-block">Countless Lives Across India</span>
             <p class="mb-0"><a href="focus-areas.html" class="btn btn-white px-3 py-2">View Our Programs</a></p>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 welcome-text">
           <h2 class="display-4 mb-3">Who Are We?</h2>
-          <p class="lead">Awaredia Innovation is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovation is a dedicated  organization working towards creating a healthier and more informed India.</p>
           <p class="mb-4">Our core mission is to educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health. We actively work to debunk myths and taboos surrounding health and nutrition while providing evidence-based knowledge.</p>
           <p class="mb-0"><a href="about.html" class="btn btn-primary px-3 py-2">Learn More</a></p>
         </div>
@@ -85,46 +85,6 @@
     </div>
   </div>
 
-  <div class="site-section border-top">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-bulb"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Food Label Awareness</h3>
-              <p>Educating people on how to read and interpret food labels correctly, helping make informed choices about packaged foods.</p>
-              <p><a href="focus-areas.html#food-labels" class="link-underline">Learn More</a></p>
-            </div>
-          </div>     
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-nutrition"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Protein & Nutrition Education</h3>
-              <p>Addressing protein deficiency in India and promoting its importance in daily diets through accessible sources.</p>
-              <p><a href="focus-areas.html#nutrition" class="link-underline">Learn More</a></p>
-            </div>
-          </div>  
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-body"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Health & Fitness Promotion</h3>
-              <p>Encouraging balanced diets and physical activity through workshops, training programs, and sustainable exercise routines.</p>
-              <p><a href="focus-areas.html#fitness" class="link-underline">Learn More</a></p>
-            </div>
-          </div> 
-        </div>
-
-      </div>
-    </div>
-  </div> <!-- .site-section -->
 
   <!-- Latest Donations section - commented out for now, can be enabled later if needed
   <div class="site-section fund-raisers">
@@ -256,35 +216,12 @@
     </div>
   </div> <!-- .section -->
 
-  <div class="featured-section overlay-color-2" style="background-image: url('images/bg_2.jpg');">
-    
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-6 mb-5 mb-md-0">
-          <img src="images/bg_2.jpg" alt="Image placeholder" class="img-fluid">
-        </div>
-
-        <div class="col-md-6 pl-md-5">
-          <div class="form-volunteer">
-            <h2>Be A Volunteer Today</h2>
-            <p class="mb-4">Join us in our mission to transform health awareness in India. We welcome volunteers who are passionate about making a difference in public health education.</p>
-            <p class="mb-5">Contact us to learn more about volunteer opportunities and how you can contribute to our cause.</p>
-            <p><a href="mailto:volunteer@awaredia.org" class="btn btn-white px-5 py-2">Contact Us</a></p>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-
-  </div> <!-- .featured-donate -->
-
   <footer class="footer">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Innovation is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovation is a dedicated  organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
@@ -364,7 +301,7 @@
     "alternateName": "Awaredia",
     "url": "https://awarediainnovations.org",
     "logo": "https://awarediainnovations.org/images/logo.png",
-    "description": "Awaredia Innovation is a dedicated non-profit organization working towards creating a healthier and more informed India through nutrition education, food label awareness, and health promotion.",
+    "description": "Awaredia Innovation is a dedicated  organization working towards creating a healthier and more informed India through nutrition education, food label awareness, and health promotion.",
     "foundingDate": "2024",
     "address": {
       "@type": "PostalAddress",
