--- a/cancellation-and-refund.html
+++ b/cancellation-and-refund.html
@@ -90,51 +90,12 @@
     </div>
   </div>
   
-  <div class="site-section border-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-bulb"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Our Mission</h3>
-              <p>To educate and empower individuals about nutrition, food labels, and health awareness, ensuring a healthier future for India.</p>
-              <p><a href="mission.html" class="link-underline">Learn More</a></p>
-            </div>
-          </div>     
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-cash"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Make Donations</h3>
-              <p>Support our mission to transform health awareness in India. Your contribution helps us reach more communities with vital health education.</p>
-              <p><a href="donate.html" class="link-underline">Learn More</a></p>
-            </div>
-          </div>  
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="ion-ios-contacts"></span></div>
-            <div class="media-body">
-              <h3 class="heading">We Need Volunteers</h3>
-              <p>Join us in our mission to transform health awareness in India. We welcome passionate individuals who want to make a difference.</p>
-              <p><a href="mailto:volunteer@awaredia.org" class="link-underline">Learn More</a></p>
-            </div>
-          </div> 
-        </div>
-      </div>
-    </div>
-  </div>
-  
   <footer class="footer">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6 col-lg-6">
           <h3 class="heading-section">About Us</h3>
-          <p class="lead">Awaredia Innovations is a dedicated non-profit organization working towards creating a healthier and more informed India.</p>
+          <p class="lead">Awaredia Innovations is a dedicated organization working towards creating a healthier and more informed India.</p>
           <p class="mb-5">We educate individuals about nutrition, food labels, protein consumption, and the impact of food and fitness on overall health.</p>
           <p><a href="about.html" class="link-underline">Read More</a></p>
         </div>
